apps/palworld/webdav/service-rclone.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service-v1.json
# Palworld Save Games WebDAV Service
#
# Exposes the rclone WebDAV server (port 5572) over Tailscale with HTTPS.
# Accessible at https://savegames.tailscale/savegames
apiVersion: v1
kind: Service
metadata:
  name: palworld-webdav
  namespace: palworld
spec:
  type: ClusterIP
  selector:
    app: palworld-webdav
  ports:
  - name: http
    port: 5572
    targetPort: 5572
    protocol: TCP
